ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tetris-ingress
  namespace: challenger-006
spec:
  rules:
  - host: "tetris-challenger006.whitecruiser.201.217.240.66.nip.io"
    http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tetris-service
                port:
                  number: 5000
